--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "ru" dir = "ltr">
   <head>
     <meta charset = "utf-8">
-    <title>Нечто</title>
+    <title>Н12</title>
     <link rel = "shortcut icon" href = "resources/images/favicon.png">
     <meta name = "viewport" content = "width = device-width, initial-scale = 1">
 
